manifests/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: auth-node-app11
  labels:
    app: auth-node-app11
    argocd/app-name: auth-node-app11
    argocd/app-selector: auth-node-app11
    backstage.io/kubernetes-id: auth-node-app11
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-node-app11
  template:
    metadata:
      labels:
        app: auth-node-app11
        app.kubernetes.io/component: backstage
        backstage.io/kubernetes-id: demo-dev
        argocd.argoproj.io/instance: auth-node-app11
        argocd/app-name: auth-node-app11
        argocd/app-selector: auth-node-app11
    spec:
      containers:
        - name: auth-node-app11
          image: image-registry.openshift-image-registry.svc:5000/demo-dev/auth-node-app11:latest
          ports:
            - name: http-3000
              containerPort: 3000
              protocol: TCP
          resources:
            limits:
              memory: '128Mi'
              cpu: '500m'
