manifests/base/ingress.yaml
apiVersion: config.openshift.io/v1
kind: Ingress
metadata:
  name: auth-node-app11
  namespace: demo-dev
  labels:
    app: auth-node-app11
    app.kubernetes.io/component: backstage
    backstage.io/kubernetes-id: demo-dev
    argocd.argoproj.io/instance: auth-node-app11
    argocd/app-name: auth-node-app11
    argocd/app-selector: auth-node-app11
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "https://auth-node-app11-demo-dev-apps.rosa.e5n9l5l2t8z7q0d.qnbq.p3.openshiftapps.com"
      secretName: auth-node-app11-tls
  rules:
  - host: "https://auth-node-app11-demo-dev-apps.rosa.e5n9l5l2t8z7q0d.qnbq.p3.openshiftapps.com"
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: auth-node-app11
              port:
                number: 3000
